[package]
name = "mtag-cli"
version = "0.1.0"
authors = ["Star-tears"]
license = "MIT"
description = "Organize music for self-built media libraries like plex, emby, jellyfin"
readme = "README.md"
homepage = "https://github.com/Star-tears/mtag-cli"
repository = "https://github.com/Star-tears/mtag-cli"
keywords = ["cli", "music", "organizer", "plex", "jellyfin"]
categories = ["command-line-utilities"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mtag"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
console = "0.15.7"
indicatif = "0.17.6"
infer = "0.15.0"
lofty = "0.15.0"
